--- a/style.css
+++ b/style.css
@@ -26,13 +26,18 @@ body {
 
 .phone {
   position: relative;
-  max-width: 440px;
+  width: 440px;
   height: 870px;
   border: 15px solid #000;
   border-top-width: 75px;
   border-bottom-width: 80px;
   border-radius: 70px;
   background-image: linear-gradient(120deg, blue, red);
+}
+@media (max-width:440px) {
+  .phone{
+    width: 420px;
+  }
 }
 
 .black{ 
