--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.none{
+  visibility: hidden;
+  opacity: 0;
+}
 
 .phone {
   position: relative;
@@ -361,6 +365,70 @@ body {
 }
 
 
+#dailingScreen{
+  padding: 10px 20px;
+  width: 100.2%;
+  height: 96%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  background: linear-gradient(150deg,#fff, #525252) no-repeat;
+  background-size: 500%;
+
+  animation: bg 3s infinite linear alternate both;
+}
+@keyframes bg {
+  from{
+    background-position: left;
+  }
+  to{
+    background-position: right;
+  }
+}
+#dailingScreen #calledData{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
+}
+#dailingScreen #calledName{
+  font-size: 30px;
+  font-weight: 600;
+}
+#dailingScreen #calledNumber{
+  font-size: 40px;
+}
+#dailingScreen .callActions {
+  width: 100%;
+  padding-bottom: 30px;
+  display: grid;
+  row-gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+}
+#dailingScreen .callActions i{
+  background-color: rgba(255, 255, 255, 0.384);
+  width: 100px;
+  height: 100px;
+  font-size: 30px;
+  border-radius: 20px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+#dailingScreen .callActions i:last-child {
+  grid-column-start: 2;
+  color: red;
+  font-size: 40px;
+}
+.blue{
+  color: blue;
+}
+
 /*********** Photos app **************/
 
 #photosScreen {
@@ -508,4 +576,38 @@ body {
   font-size: 16px;
   padding-left: 5px;
   
+}
+
+
+/********************** Camera Screen *************************/
+#cameraScreen{
+  background-color: #000;
+  width: 100.2%;
+  height: 96%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#cameraScreen .camActions{
+  width: 100%;
+  padding-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+#cameraScreen .camActions i{
+  color: #fff;
+  font-size: 32px;
+}
+#cameraScreen video{
+  width: 100%;
+  background-color: #fff;
+}
+#cameraScreen .camShot i{
+  text-align: center;
+  color: #fff;
+  font-size: 95px;
+  padding-top: -50px;
+  padding-bottom: 20px;
 }
